--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "checkJs": true,
     "baseUrl": ".",
     "paths": {
-      "root/*": ["./src/*"]
+      "$root/*": ["./src/*"]
     },
     "isolatedModules": true
   },
